# code

./: README.md
2021/Docker/: db.sqlite3  docker-compose.yml
2021/Sharity/: db.sqlite3
2021/ft_blogapp/: pubspec.yaml
2021/ft_wordpair/: README.md
2021/ft_worldtime/: README.md  pubspec.yaml
2021/rtdo/: package.json
2022/Learn/: package-lock.json  package.json
2022/Portfolio/: .env  package-lock.json  package.json
2022/React-Testing-Library-Net-Ninja-01-Starter-Project/: package.json
2022/Typescript/: index.ts
2022/boat/: .env  package-lock.json  package.json
2022/dummy/: Main.html
2022/foodadvisor/: package.json
2022/goldfit/: next.config.js  package-lock.json  package.json
2022/gpt/: .gitignore  package-lock.json
2022/instagram/: next.config.js  package-lock.json  package.json
2022/krypt/: package-lock.json  package.json  tailwind.config.js
2022/mern_graphql/: .env  package-lock.json  package.json
2022/mui/: package-lock.json  package.json
2022/my-project/: package.json
2022/nestauth/: package-lock.json  package.json
2022/nestblog/: package.json  (+1 more)
2023/devops/poetry-docker-django-postgres/: pyproject.toml
2023/devops/poetry-docker-django-postgres/backend/: db.sqlite3
2023/devops/poetry-docker-django-postgres/backend/backend/: settings.py
emtest/: pubspec.yaml
ft_chatapp/: README.md  pubspec.yaml
ft_fprintauth/: README.md  pubspec.yaml
ft_wordpair/: pubspec.yaml
ft_worldtime/: pubspec.yaml
listlearn/: pubspec.yaml
nxt_netlist/: package-lock.json
nxtdo/: package-lock.json  package.json
rtdo/: package-lock.json
(+1121 files in other folders)
