[tool.poetry]
name = "poetry-docker-django-postgres"
version = "0.1.0"
description = ""
authors = ["Surendhar <76396808+surendhar-palanisamy@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "poetry_docker_django_postgres"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
black = "^23.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
